tests/semantic_errors/global_redef.c
int x;
int x; // ERROR: global variable redefined

int main() {
    return x;
}